src/styles/styles.css
* {
    font-family: 'Nunito Sans';
    color: 'black';
}

body {
    background-color: #f9f9f9;
    margin: 0;
    padding: 0;
}

a { /* Unvisited link  */
    color:#000000;
}
a:visited { /* Visited link  */
    color:#000000;
}
a:hover { /* Mouse over link  */
    color:#000000;
}
a:active { /* Selected link  */
    color:#000000;
}

.twitter-tweet.twitter-tweet-rendered {
    margin: auto !important;
}

